--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 #
-# .gitignore
+# 
 #
 
 .DS_Store
-
-# cmake
 build
 
+# Created by https://www.toptal.com/developers/gitignore/api/c,c++,cmake
+# Edit at https://www.toptal.com/developers/gitignore?templates=c,c++,cmake
+
+### C ###
 # Prerequisites
 *.d
 
@@ -59,3 +61,41 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+### C++ ###
+# Prerequisites
+
+# Compiled Object files
+*.slo
+
+# Precompiled Headers
+
+# Compiled Dynamic libraries
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+
+# Executables
+
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+### CMake Patch ###
+# External projects
+*-prefix/
+
+# End of https://www.toptal.com/developers/gitignore/api/c,c++,cmake
