[Modufy #23] add testcase, fix something

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,6 +19,8 @@ include(GoogleTest)
 add_executable(simple_reversi_test)
 target_sources(simple_reversi_test PRIVATE
     test_direction.cpp
+    test_point.cpp
+    test_field.cpp
 )
 target_link_libraries(simple_reversi_test PRIVATE
     GTest::gtest_main
