--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake .. -DSIMPLE_REVERSI_BUILD_TESTS=ON -DSIMPLE_REVERSI_HEADLESS=ON
+          cmake .. -DFLIPSTONE_BUILD_TESTS=ON
       - name: Build
         working-directory: ${{github.workspace}}/build
         run: cmake --build .
