--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,17 +3,15 @@
 #
 cmake_minimum_required(VERSION 3.0)
 
-add_library(reversi)
-target_sources(reversi PRIVATE
+add_library(flipstone)
+target_sources(flipstone PRIVATE
     field.cpp
     reversi.cpp
 )
-target_include_directories(reversi PUBLIC
+target_include_directories(flipstone PUBLIC
     ${PROJECT_SOURCE_DIR}/include
+    ${collection2_SOURCE_DIR}/include
 )
-target_compile_options(reversi PRIVATE
+target_compile_options(flipstone PRIVATE
     -Wall
-)
-target_link_libraries(reversi PRIVATE
-    collection2
 )
