[Fix #41] CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,7 +16,7 @@ target_include_directories(flipstone PUBLIC
 target_compile_options(flipstone PRIVATE
     -Wall
 )
-if(FLIPSTONE_USE_STL)
+if(FLIPSTONE_USE_STL OR FLIPSTONE_BUILD_TESTS)
     target_compile_definitions(flipstone PRIVATE
         FLIPSTONE_USE_STL=1
     )
